<resources>
    <string translatable="false" name="app_name">Fernan Shop</string>
    <string translatable="false" name="profile_name">Fernan Apps</string>
    <string translatable="false" name="profile_email">dev.fernan.apps@gmail.com</string>

    <!--    Headings-->
    <string name="headings_one">20% Discount\nNew  Arrival Product</string>
    <string name="headings_two">Take Advanta\nOf The Offer Shopping </string>
    <string name="headings_three">All Types Offers\nWithin Your Reach</string>

    <!--    Description-->
    <string name="desc_one">Publish up your selfies to make yourself\nmore beautiful with this app.</string>
    <string name="desc_two">Publish up your selfies to make yourself\nmore beautiful with this app.</string>
    <string name="desc_three">Publish up your selfies to make yourself\nmore beautiful with this app.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name_example">@string/profile_name</string>
    <string name="check_agree"><![CDATA[By creating an account you have to agree with our them & condication.]]></string>
    <string name="start_shopping">Start Shopping</string>
    <string name="continue_shopping">Continue Shopping</string>

    <string name="successful_desc">You have successfully registered in our app and start working in it.</string>
    <string name="welcome">Welcome,</string>
    <string name="login_decs">please login or sign up to continue our app</string>
    <string name="login_with_fb">Continue with Facebook</string>
    <string name="login_with_google">Continue with Google</string>

    <string name="login__title"></string>
    <string name="login__email_hint">Email</string>
    <string name="login__password_hint">Contraseña</string>
    <string name="login__login_button">Password</string>
    <string name="login__signup_button">Create account</string>

    <string name="login__error_user_no_registered">There is no user registered with this email</string>
    <string name="login__error_wrong_password">Incorrect password</string>
    <string name="login__error_unknown_error">Algo salió mal, intente de nuevo más tarde</string>
    <string name="login__error_enter_email">Ingrese su correo electrónico.</string>
    <string name="login__error_enter_password">Ingrese su contraseña.</string>

    <string name="signup__header">Crear cuenta</string>
    <string name="signup__email_hint">Correo electrónico</string>
    <string name="signup__password_hint">Contraseña</string>
    <string name="signup__conf_password">Confirma tu contraseña</string>
    <string name="signup__signup_button">Registrarme</string>
    <string name="signup__signup_successfully">Cuenta creada correctamente</string>
    <string name="signup__error_password_insecure">Tu contraseña debe tener al menos 6 caracteres</string>
    <string name="signup__error_passwords_match">Las contraseñas no coinciden</string>
    <string name="signup__error_email_already_registered">Ya existe una cuenta registrada con este correo electrónico</string>
    <string name="signup__error_unknown_error">Algo salió mal, intente de nuevo más tarde</string>


    <string name="auth_error__user_not_exist">El usuario no existe</string>
    <string name="auth_error__invalid_credentials">Correo electrónico o contraseña incorrectos</string>
    <string name="auth_error__user_collision">El correo electrónico ya está en uso por otra cuenta</string>
    <string name="auth_error__weak_password">La contraseña es demasiado débil</string>
    <string name="auth_error__recent_login_required">Es necesario iniciar sesión nuevamente para realizar esta acción</string>
    <string name="auth_error__action_code">Código de acción no válido</string>
    <string name="need_terms_conds">Necesita aceptar los Terminos y Condiciones</string>

    <string name="navigation_page_title_home">Home</string>
    <string name="navigation_page_title_cart">Card</string>
    <string name="navigation_page_title_notification">Notification</string>
    <string name="navigation_page_title_profile">Profile</string>
    <string name="navigation_page_title_categories">Categories</string>
    <string name="navigation_page_title_settings">Settings</string>
    <string name="navigation_page_title_favorites">Favorites</string>
    <string name="navigation_page_title_personal_details">Personal Details</string>
    <string name="navigation_page_title_orders">@string/profile_personal_my_order</string>
    <string name="navigation_page_title_orders_items">Order: Items</string>
    <string name="navigation_page_title_products">Products</string>
    <string name="navigation_page_title_payment">Payment</string>


    <string name="menu_user">User</string>
    <string name="menu_filtered">Filter</string>

    <string name="welcome_desc">Our Fernan Shop App</string>
    <string name="search">Search …</string>
    <string name="offer_50">50% Off</string>
    <string name="offer_50_desc">On everything</string>
    <string name="offer_code">With code: fx2023</string>
    <string name="offer_get_now">Get Now</string>
    <string name="categorie_size_product">208 Product</string>
    <string name="categorie_title">New Arrivals</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="view_all">View All</string>
    <string name="product_title">The Marc Jacobs, The Marc Jacobs</string>
    <string name="product_subtitle">Traveler Tote, Get a little lift from these Sam Edelman sandals featuring ruched straps and leather</string>
    <string name="product_price">$195.00</string>
    <string name="menu_cart">Your Cart</string>
    <string name="product_review">(320 Review)</string>
    <string name="product_size">Size</string>
    <string name="product_size_example">XXL</string>
    <string name="product_description">Description</string>
    <string name="product_description_text">Get a little lift from these Sam Edelman sandals featuring ruched straps and leather lace-up ties, while a braided jute sole makes a fresh statement for summer.</string>
    <string name="product_price_title">Total Price</string>
    <string name="product_price_value">$192.00</string>

    <string name="add_to_cart">Add to Cart</string>
    <string name="added_product_to_cart">Added Product</string>
    <string name="my_cart">My Cart</string>
    <string name="you_dont_have_any_product">"You don't have any product "</string>
    <string name="you_dont_have_any_order">"You don't have any order "</string>
    <string name="you_dont_have_any_notification">"You don't have any notification "</string>


    <string name="profile_personal_details">Personal Details</string>
    <string name="profile_personal_my_order">My Orders</string>
    <string name="profile_personal_my_favourites">My Favourites</string>
    <string name="profile_personal_shipping_address">Shipping Address</string>
    <string name="profile_personal_my_card">My Card</string>
    <string name="profile_personal_settings">Settings</string>

    <string name="profile_personal_contact_support">Contact Support</string>
    <string name="profile_personal_faqs">Faqs</string>
    <string name="profile_personal_privacy_policy">Privacy Policy</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>

    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="line1">Line1</string>
    <string name="line2">Line2</string>
    <string name="postal_code">Postal Code</string>
    <string name="state">State</string>


    <string name="profile_age">26</string>
    <string name="profile_phone">987654321</string>
    <string name="profile_address_city">San Francisco</string>
    <string name="profile_address_country">US</string>
    <string name="profile_address_line1">123 Market St</string>
    <string name="profile_address_line2">#345</string>
    <string name="profile_address_postal_code">94107</string>
    <string name="profile_address_state">CA</string>


    <string name="settings_language">Language</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_help_center">Help Center</string>
    <string name="log_out">Log Out</string>
    <string name="loading">Loading...</string>

    <string name="one_moment_verifying">One moment,\nverifying…</string>
    <string name="one_moment_coming_out">One moment,\ncoming out…</string>
    <string name="one_moment_logging_in">One moment,\nlogging in…</string>
    <string name="one_moment_sign_up">One moment,\nsign up…</string>
    <string name="one_moment_payment_initiated">One moment,\nTransaction has been initiated…</string>
    <string name="one_moment_payment_progress">Transaction in progress…</string>
    <string name="one_moment_payment_successfully">Transaction has been successfully executed</string>
    <string name="one_moment_payment_failure">Transaction Failure</string>

    <string name="one_moment_saving_user">One moment,\nSaving user…</string>
    <string name="one_moment_saving_card">One moment,\nSaving card…</string>

    <string name="loading_your_cards">Loading,\nyour cards…</string>
    <string name="not_cards">You don\'t have cards yet, please add</string>

    <string name="there_was_a_mistake">There was a mistake</string>
    <string name="saved_successfully">Saved Successfully</string>

    <string name="one_moment_order_failure">Order Failure</string>
    <string name="one_moment_order_success">Order : Success</string>
    <string name="one_moment_order_generating">Order : Generating</string>

    <string name="finish">Finish</string>


    <string name="products">Products</string>
    <string name="total_item">Total (%s item)</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="contact_to_buy">Contact, to buy</string>
    <string name="_continue">Continue</string>

    <string name="payment">Payment</string>
    <string name="enter_promotion_code">Enter Promotion Code</string>
    <string name="billing_address">BILLING ADDERS</string>
    <string name="config_address">Config Address</string>
    <string name="profile_address">CA,San Francisco,US\n123 Market St, #345\n+519876543231</string>

    <string name="save">Save</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="format_quantity">Quantity: %s</string>
    <string name="format_size">Size: %s</string>
    <string name="amount">Amount:</string>
    <string name="order_date">Order Date:</string>
    <string name="delivery">Delivery:</string>
    <string name="order_no">Order No:</string>
    <string name="send">send</string>
    <string name="notification_title">Kristine Jones It is a long established fact\nthat a reader will be distracted by the\nreadable content of a page.</string>
    <string name="notification_time">2 hours ago</string>
    <string name="add_card">Add Card</string>

    <string name="card_number">Card number</string>
    <string name="card_details">Card Details</string>
    <string name="card_exp_date">Exp date</string>
    <string name="card_cvc">CVV</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="total_price">Total Price</string>
</resources>












