<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/_15sdp"
    app:cardBackgroundColor="@color/white"
    android:foreground="?attr/selectableItemBackground"
    app:cardElevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:contentPadding="@dimen/_10sdp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="@dimen/_5sdp"
    android:layout_margin="@dimen/_5sdp"
    >

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@android:color/transparent"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="0dp"
        android:layout_height="100dp"
        android:layout_width="100dp">

        <ImageView

            android:id="@+id/product_image"
            android:layout_gravity="end"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/bag_1" />


    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_marginStart="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:layout_gravity="start"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/product_title"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/product_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/product_subtitle"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_60" />

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/format_quantity"
            android:singleLine="true"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_40" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/product_size"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/format_size"
                android:singleLine="true"
                android:textSize="13sp"
                android:layout_gravity="top"
                android:gravity="top"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_40" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:singleLine="true"
                android:text="@string/product_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>